# robot

./: ErrorMsg  guide.txt  package.xml  path_discribe.txt  setup.py
config/: nav2_params.yaml  nav2_params_phase1.yaml  nav2_params_phase2.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
laserscan_to_point_publisher/: package.xml  setup.cfg  setup.py
laserscan_to_point_publisher/laserscan_to_point_publisher/: laserscan_to_point_publish.py
launch/: sim_complete_test.launch.py  sim_env_at_start.launch.py  sim_env_random.launch.py  sim_phase1_test.launch.py  sim_phase2_test.launch.py
map/: map_create.ipynb  maze_map_dm.yaml
maps/: map_create.ipynb  maze_no_soft.pgm  maze_no_soft.yaml  maze_original.yaml
simple_maze_bot/: guide.txt  package.xml  path_discribe.txt  setup.py
simple_maze_bot/config/: nav2_params_phase1.yaml  nav2_params_phase2.yaml
simple_maze_bot/launch/: phase1_to_start.launch.py  phase2_maze.launch.py  sim_complete_test.launch.py  sim_env_at_start.launch.py  sim_env_random.launch.py  sim_phase1_test.launch.py  sim_phase2_test.launch.py
simple_maze_bot/maps/: map_create.ipynb  maze_no_soft.yaml  maze_original.pgm  maze_original.yaml
simple_maze_bot/scripts/: go_to_start.py  start_maze_task.py  test_complete_simulation.py
simple_maze_bot/simple_maze_bot/: go_to_start.py  start_maze_task.py  test_complete_simulation.py
simple_maze_bot/simple_maze_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
simple_maze_bot/urdf/: MicroROS.urdf  MicroROS_v1.urdf
simple_maze_bot/worlds/: test.world
worlds/: maze_environment.world
